## airrac/basic sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libairracbas.la

libairracbas_la_SOURCES = $(airrac_bas_h_sources) $(airrac_bas_cc_sources) 
libairracbas_la_CXXFLAGS = $(STDAIR_CFLAGS)
libairracbas_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/basic
#pkginclude_HEADERS = $(airrac_bas_h_sources)
