#
include_directories (BEFORE ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}) 

# Required libraries
set (CMAKE_REQUIRED_LIBRARIES ${BOOST_LIBS_FOR_BIN} ${MYSQL_LIBRARIES}
  ${SOCI_LIBRARIES} ${SOCIMYSQL_LIBRARIES})

# Assembling
add_executable (${LOCAL_PROJECT_NAME} ${LOCAL_PROJECT_NAME}.cpp)
target_link_libraries (${LOCAL_PROJECT_NAME} 
  ${AIRRAC_LIB_TARGET} ${AIRRAC_UICL_LIB_TARGET} 
  ${Boost_PROGRAM_OPTIONS_LIBRARY} ${CMAKE_REQUIRED_LIBRARIES})

# Install binaries
install (TARGETS ${LOCAL_PROJECT_NAME} 
  EXPORT AirracLibraryDepends
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin)
