## airrac/bom sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libairracbom.la

libairracbom_la_SOURCES = $(airrac_bom_h_sources) $(airrac_bom_cc_sources) 
libairracbom_la_CXXFLAGS = $(STDAIR_CFLAGS)
libairracbom_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/bom
#pkginclude_HEADERS = $(airrac_bom_h_sources)
