## airrac/factory sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libairracfac.la

libairracfac_la_SOURCES = $(airrac_fac_h_sources) $(airrac_fac_cc_sources)
libairracfac_la_CXXFLAGS = $(STDAIR_CFLAGS)
libairracfac_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/factory
#pkginclude_HEADERS = $(airrac_fac_h_sources)
