##
# Assembling
add_executable (${MODULE_NAME} ${MODULE_NAME}.cpp)
target_link_libraries (${MODULE_NAME}
  ${BOOST_LIBS_FOR_BIN} ${MYSQL_LIBRARIES}
  ${SOCI_LIBRARIES} ${SOCIMYSQL_LIBRARIES}
  ${STDAIR_LIBRARIES} ${MODULE_LIB_TARGET} airraclib)

##
# Install binaries
install (TARGETS ${MODULE_NAME} 
  EXPORT ${LIB_DEPENDENCY_EXPORT}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT runtime)
